# Gary

./: .gitignore  README.md  pyproject.toml
manager/: commands.py  main.py  task management.py  task_management.py  utils.py
manager/db/: db_initialize.py  populate.py  populate_tasks.py
manager/operations/: notifications.py  recurring_tasks.py  tags.py  tasks.py  users.py
